...
      key: formKey,
      child: Column(
        crossAxisAlignment: CrossAxisAlignment.start,
        children: [
          AuthTextFieldWidget(
            controller: emailController,
            hintText: 'Email',
            keyboardType: TextInputType.emailAddress,
            textInputAction: TextInputAction.next,
            validator: AppValidators.validateEmail,
            autovalidateMode: AutovalidateMode.onUserInteraction,
            prefixIcon: Icon(
              Icons.mail_outline_rounded,
...
              size: 22.sp,
            ),
          ),
          SizedBox(height: 24.h),
          AuthTextFieldWidget(
            controller: passwordController,
            hintText: 'Password',
            isPassword: true,
            textInputAction: TextInputAction.done,
            validator: AppValidators.validatePassword,
            autovalidateMode: AutovalidateMode.onUserInteraction,
            prefixIcon: Icon(
              Icons.lock_outline_rounded,
...
